# aurora-core

./: .gitignore  .pre-commit-config.yaml  docker-compose.yaml  logging.ini  logging.yaml  pyproject.toml  pytest.ini
.github/workflows/: ci-cd.yml
app/: dependencies.py  main.py
app/config/: base.py  config.py  engine.py  mqtt.py  redis.py
app/dependencies/: auth.py  config.py  delivery.py  group.py  handlers.py  matrix.py  pool.py  preprocess.py  repo.py  time.py  user.py  valid.py
app/dto/: access.py  client.py  matrix.py  user.py
app/manage/: admin.py  salt.py
app/middleware/: log.py
app/models/: __init__.py  client.py  matrix.py  user.py
app/repo/: user.py
app/repo/client/: mongo.py  proto.py
app/repo/matrix/: mongo.py  proto.py
app/repo/user/: mongo.py  proto.py
app/routes/: admin.py  auth.py  client.py  control.py  matrix.py  user.py
app/services/: auth.py
app/services/auth/: credentials.py  tokens.py
app/services/connection/: agent.py  inspector.py  observer.py  receiver.py  sender.py  session.py
app/services/delivery/: mqtt.py  proto.py
app/services/handler/: hex_stream.py  proto.py
app/services/pool/: clients.py  (+1 more)
app/utils/: access.py  cache.py  callback.py  create_admin.py  hashing.py
docker/: Dockerfile  dockerize.sh
prometheus/: prometheus.yml
tests/: conftest.py
tests/api/: auth_test.py  client_test.py  matrix_test.py  user_test.py
tests/matrix_repo/: crud_test.py
tests/repo/: client_test.py  matrix_test.py  user_test.py
tests/services/: connection_pool_test.py
tests/user_repo/: block_test.py  crud_test.py
(+10 files in other folders)
