[tool.poetry]
name = "aurora-rsc"
version = "0.1.0"
description = ""
authors = ["twoics <second_vozhzhov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
sqlalchemy = "^2.0.25"
pydantic-settings = "^2.1.0"
beanie = "^1.25.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
pytz = "^2024.1"
python-multipart = "^0.0.7"
websockets = "^12.0"
aiomqtt = "^2.0.0"
prometheus-fastapi-instrumentator = "^6.1.0"
fastapi-limiter = "^0.1.6"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^8.0.1"
mongomock-motor = "^0.0.27"
httpx = "^0.26.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
